    - put creation of home directory in a function
  * Streamlining of print(f)/die(f) statements regarding quoting,
    parenthesis and spaces. (mh/jh)
  * Clarify error message if system group to be added does already
    exist as a non-system group.
    Thanks to Peter Eisentraut. (mh) Closes: #326192
  * Move package from base to admin to clear up override disparity. (mh)

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sun,  2 Oct 2005 11:37:02 +0200

adduser (3.69) experimental; urgency=low

  * the "please no more bugs from users of shadowless systems"
    release. (mh) Closes: #327144
  * versioned depends on passwd >> 1:4.0.12 because of the changed
    chage exit code (now, 15) in the "shadow passwod not enabled"
    case. Earlier versions return 3 or even a normal 1 in that case.
  * shadowless setups do only work with adduser older than 3.64, or
    with passwd younger than 1:4.0.12.
  * make clear in 3.68 changelog that Jörg's patches were against adduser
  * patches by Jörg Hoh:
    - move common code to AdduserCommon.pm
    - deluser: use GetOpt instead of manual option parsing
    - deluser: restructure plausibility checks
    - deluser: introduce "use strict"
  * make adduser.conf.5 NAME_REGEX consistent with the code. Thanks to
    Christoph Ulrich Scholler. Closes: #323395.
  * show deluser that name_regex is a valid configuration directive.
    Thanks to Christoph Ulrich Scholler. Closes: #324699.
  * put new FSF street address in debian/copyright

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Thu,  8 Sep 2005 17:18:18 +0000

adduser (3.68) experimental; urgency=low

  * adduser patches by Jörg Hoh:
    - use GetOpt instead of manual option parsing
    - restructure plausibility checks
    - Comment update
    - relaxed checking of configuration ("yes" is checked case
      insensitively now)
    - explicit return values
    - reorder command line checks and make them more consistent
    - add more comments
