@@ -9,15 +9,16 @@ LOCALEDIR = /usr/share/locale
 %.mo: %.po
 	$(MSGFMT) -o $@ $<
 
-%.pox: %.po adduser.pot
-	$(MSGMERGE) -o $@ $^
-
-LANG = ca cs da de es fr ja ko nb nl pl pt_BR ru uk zh_CN
+PO = $(wildcard *.po)
+LANG = $(basename $(PO))
 MO = $(addsuffix .mo,$(LANG))
-POX = $(addsuffix .pox,$(LANG))
 
-all: $(MO)
-update: $(POX)
+all: update $(MO)
+update: adduser.pot
+	-@for po in $(PO); do \
+	echo -n "Updating $$po"; \
+	$(MSGMERGE) -U $$po adduser.pot; \
+	done;
 
 adduser.pot: ../adduser ../deluser ../AdduserCommon.pm
 	$(XGETTEXT) -L Perl -k_ -o $@ $?
@@ -30,4 +31,6 @@ install: $(MO)
 	done
 
 clean:
-	$(RM) $(MO) *~ adduser.pot *.pox
+	$(RM) $(MO) *~
+
+.PHONY: update
